# FlightCode

./: Cargo.toml  README.md  config.env  exec-flightcode.sh
.github/workflows/: rust.yml
data_collector/: Cargo.toml
data_collector/collect_control/: mod.rs
data_collector/drivers/serial/fib/: link_framing.rs
data_collector/src/: main.rs
driverslib/ll_protocol/: Cargo.toml
driverslib/ll_protocol/src/: lib.rs  main.rs
driverslib/ll_protocol/src/crc/: mod.rs
driverslib/ll_protocol/src/frame/: mod.rs
driverslib/ll_protocol/src/frame_deserializer/: mod.rs
driverslib/ll_protocol/src/frame_serializer/: mod.rs
helper-scripts/: capture-pi-camera-raw-frame.py
src/: main.rs
src/application/: mod.rs
src/application/battery_monitor/: mod.rs
src/application/data_manage/: mod.rs
src/application/data_manage/live_json_stream/: mod.rs
src/application/payload_orientator/: mod.rs
src/application/rest_api_server/: mod.rs
src/application/tasks/: capture_go_pro_images.rs  capture_ircam_images.rs  capture_picam_images.rs  example_task.rs  mavlink_adapter.rs  mod.rs  obc_telem.rs  pib_adapter.rs
src/application/timer/: mod.rs
src/scheduler/: mod.rs
src/scheduler/collection/: capture_go_pro_images.rs  example_task.rs  mod.rs
src/scheduler/collection_tasks/: example_task.rs  mod.rs
src/scheduler/timer/: mod.rs
system/services/: flightcode.service  ppp-serial-ethernet.service
system/udev_rules/: 80-usb-thermal-camera.rules  99-usb-thermal-camera.rules
tools/cli_ll_protocol/: Cargo.toml
tools/cli_ll_protocol/src/: main.rs
(+4 files in other folders)
