[package]
name = "flightcode"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
envconfig = "0.10.0"
json = "0.12.4"
futures-io = "0.3.30"
reqwest = { version = "0.11.24", features = ["blocking"] }
serialport = "4.3.0"
byteorder = "1.5.0"
ctrlc = "3.4.2"
opencv = "0.88.8"
mavlink = "0.12.2"
serde_json = "1.0.114"
actix-web = "4.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ll_protocol]
path="./driverslib/ll_protocol"
